feat: added 5 unique header and footer designs in index.html

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <a href="#">Beast Boy - Recon</a>
             </div>
             <div class="column">
-                <h4>Support</h4>
+                <h4>Tech Support</h4>
                 <a href="#">Cyborg - Tech</a>
                 <a href="#">Tower AI - Systems</a>
             </div>
